# opag

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  acinclude.m4  config.h.in  configure  configure.ac
debian/: changelog  control  copyright  gbp.conf  opag.dirs  opag.install  rules
debian/bug/: control  presubj
debian/patches/: fix-compile-error.diff  series
man/: Makefile.am  Makefile.in  opag.1.in
src/: .gitignore  Makefile.am  Makefile.in  chartype.h  fileread.c  fileread.h  opag.c  opag.h  options.c  options.h  options.opag  output.c  parse.c  qsort.c  stdinc.h  strerror.c  util.c  util.h
