## Process this file with automake to produce Makefile.in.
## This file is part of opag, an option parser generator.
## Copyright (C) 2003, 2004 Martin Dickopp
##
## This file is free software; the copyright holder gives unlimited
## permission to copy and/or distribute it, with or without
## modifications, as long as this notice is preserved.
##
## This file is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY, to the extent permitted by law; without
## even the implied warranty of MERCHANTABILITY or FITNESS FOR A
## PARTICULAR PURPOSE.

SUBDIRS = src man

EXTRA_DIST = debian/bug/presubj debian/bug/control debian/changelog debian/compat debian/control debian/copyright \
             debian/opag.dirs debian/opag.install debian/rules
